各クラスの評価

--- a/first_task/Fashion_MNIST_093.ipynb
+++ b/first_task/Fashion_MNIST_093.ipynb
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 177,
-   "id": "40cb4734",
+   "id": "2cc9118e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 182,
-   "id": "86894ab5",
+   "id": "104b4232",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": 183,
-   "id": "82c504b3",
+   "id": "695601a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 184,
-   "id": "34565559",
+   "id": "0ea9aa1f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": 185,
-   "id": "953e2e94",
+   "id": "9b07586a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": 186,
-   "id": "b53565a6",
+   "id": "bc929eb5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 187,
-   "id": "a0b707c8",
+   "id": "a53fa4cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,8 +268,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "85b5eb09",
+   "execution_count": 188,
+   "id": "695f0ed9",
    "metadata": {
     "scrolled": true
    },
@@ -285,7 +285,9 @@
       "epoch 5 [train] loss: 0.009797, accuracy: 89% [test] loss: 0.002666, accuracy: 90%\n",
       "epoch 6 [train] loss: 0.009262, accuracy: 89% [test] loss: 0.002569, accuracy: 91%\n",
       "epoch 7 [train] loss: 0.008835, accuracy: 90% [test] loss: 0.002496, accuracy: 91%\n",
-      "epoch 8 [train] loss: 0.008559, accuracy: 90% [test] loss: 0.002393, accuracy: 91%\n"
+      "epoch 8 [train] loss: 0.008559, accuracy: 90% [test] loss: 0.002393, accuracy: 91%\n",
+      "epoch 9 [train] loss: 0.008227, accuracy: 91% [test] loss: 0.002373, accuracy: 92%\n",
+      "epoch 10 [train] loss: 0.008092, accuracy: 91% [test] loss: 0.002297, accuracy: 92%\n"
      ]
     }
    ],
@@ -311,8 +313,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8875f1b2",
+   "execution_count": 189,
+   "id": "ede2c325",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,10 +337,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fd84288b",
+   "execution_count": 190,
+   "id": "07d8d6b5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of T-shirt/Top: 88.50%\n",
+      "Accuracy of Trouser: 97.90%\n",
+      "Accuracy of Pullover: 87.30%\n",
+      "Accuracy of Dress: 91.30%\n",
+      "Accuracy of Coat: 84.30%\n",
+      "Accuracy of Sandal: 98.40%\n",
+      "Accuracy of Shirt: 75.80%\n",
+      "Accuracy of Sneaker: 97.40%\n",
+      "Accuracy of Bag: 98.80%\n",
+      "Accuracy of Ankle Boot: 96.80%\n"
+     ]
+    }
+   ],
    "source": [
     "class_correct = [0. for _ in range(10)]\n",
     "total_correct = [0. for _ in range(10)]\n",
@@ -363,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e37aca25",
+   "id": "4f949dc6",
    "metadata": {},
    "outputs": [],
    "source": []
