--- a/first_task/Fashion_MNIST_093.ipynb
+++ b/first_task/Fashion_MNIST_093.ipynb
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 102,
    "id": "4e854415",
    "metadata": {},
    "outputs": [],
@@ -145,21 +145,34 @@
     "    def __init__(self):\n",
     "        super().__init__()\n",
     "        self.features = nn.Sequential(\n",
-    "            nn.Conv2d(1, 32, kernel_size=3, padding=1),\n",
-    "            nn.ReLU(),\n",
-    "            nn.MaxPool2d(kernel_size=2),\n",
+    "            nn.Conv2d(1, 32, kernel_size=3, stride=1, padding=1),\n",
+    "            nn.BatchNorm2d(32),\n",
+    "            nn.ReLU(inplace=True),\n",
+    "            nn.Conv2d(32, 32, kernel_size=3, stride=1, padding=1),\n",
+    "            nn.BatchNorm2d(32),\n",
+    "            nn.ReLU(inplace=True),\n",
+    "            nn.MaxPool2d(kernel_size=2, stride=2),\n",
     "            nn.Conv2d(32, 64, kernel_size=3, padding=1),\n",
-    "            nn.ReLU(),\n",
-    "            nn.MaxPool2d(kernel_size=2)\n",
+    "            nn.BatchNorm2d(64),\n",
+    "            nn.ReLU(inplace=True),\n",
+    "            nn.Conv2d(64, 64, kernel_size=3, padding=1),\n",
+    "            nn.BatchNorm2d(64),\n",
+    "            nn.ReLU(inplace=True),\n",
+    "            nn.MaxPool2d(kernel_size=2, stride=2)\n",
     "        )\n",
     "        \n",
     "        self.classifier = nn.Sequential(\n",
-    "            nn.Dropout(),\n",
-    "            nn.Linear(64 * 7 * 7, 128),\n",
-    "            nn.ReLU(),\n",
-    "            nn.Dropout(),\n",
-    "            nn.Linear(128, 10),\n",
-    "        nn.LogSoftmax(dim=1))\n",
+    "            nn.Dropout(p = 0.5),\n",
+    "            nn.Linear(64 * 7 * 7, 512),\n",
+    "            nn.BatchNorm1d(512),\n",
+    "            nn.ReLU(inplace=True),\n",
+    "            nn.Dropout(p = 0.5),\n",
+    "            nn.Linear(512, 512),\n",
+    "            nn.BatchNorm1d(512),\n",
+    "            nn.ReLU(inplace=True),\n",
+    "            nn.Dropout(p = 0.5),\n",
+    "            nn.Linear(512, 10),\n",
+    "            nn.LogSoftmax(dim=1))\n",
     "        \n",
     "    def forward(self, x):\n",
     "        x  = self.features(x)\n",
@@ -171,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 103,
    "id": "a04a5567",
    "metadata": {},
    "outputs": [],
@@ -181,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 104,
    "id": "42b8f831",
    "metadata": {},
    "outputs": [],
@@ -192,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 105,
    "id": "fb49be35",
    "metadata": {},
    "outputs": [],
@@ -202,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 106,
    "id": "4866fd92",
    "metadata": {},
    "outputs": [],
@@ -237,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 107,
    "id": "a6774a43",
    "metadata": {},
    "outputs": [],
@@ -268,66 +281,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 108,
    "id": "19a97654",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch 1 [train] loss: 0.017972, accuracy: 79% [test] loss: 0.003833, accuracy: 86%\n",
-      "epoch 2 [train] loss: 0.012470, accuracy: 86% [test] loss: 0.003094, accuracy: 88%\n",
-      "epoch 3 [train] loss: 0.010988, accuracy: 87% [test] loss: 0.002849, accuracy: 90%\n",
-      "epoch 4 [train] loss: 0.010013, accuracy: 88% [test] loss: 0.002742, accuracy: 90%\n",
-      "epoch 5 [train] loss: 0.009440, accuracy: 89% [test] loss: 0.002538, accuracy: 91%\n",
-      "epoch 6 [train] loss: 0.008948, accuracy: 90% [test] loss: 0.002521, accuracy: 91%\n",
-      "epoch 7 [train] loss: 0.008613, accuracy: 90% [test] loss: 0.002501, accuracy: 91%\n",
-      "epoch 8 [train] loss: 0.008271, accuracy: 90% [test] loss: 0.002344, accuracy: 92%\n",
-      "epoch 9 [train] loss: 0.008095, accuracy: 90% [test] loss: 0.002323, accuracy: 92%\n",
-      "epoch 10 [train] loss: 0.007838, accuracy: 91% [test] loss: 0.002353, accuracy: 91%\n",
-      "epoch 11 [train] loss: 0.007624, accuracy: 91% [test] loss: 0.002284, accuracy: 92%\n",
-      "epoch 12 [train] loss: 0.007391, accuracy: 91% [test] loss: 0.002274, accuracy: 92%\n",
-      "epoch 13 [train] loss: 0.007347, accuracy: 91% [test] loss: 0.002244, accuracy: 92%\n",
-      "epoch 14 [train] loss: 0.007147, accuracy: 92% [test] loss: 0.002221, accuracy: 92%\n",
-      "epoch 15 [train] loss: 0.007059, accuracy: 92% [test] loss: 0.002289, accuracy: 92%\n",
-      "epoch 16 [train] loss: 0.006889, accuracy: 92% [test] loss: 0.002217, accuracy: 92%\n",
-      "epoch 17 [train] loss: 0.006803, accuracy: 92% [test] loss: 0.002224, accuracy: 92%\n",
-      "epoch 18 [train] loss: 0.006634, accuracy: 92% [test] loss: 0.002176, accuracy: 92%\n",
-      "epoch 19 [train] loss: 0.006691, accuracy: 92% [test] loss: 0.002186, accuracy: 92%\n",
-      "epoch 20 [train] loss: 0.006501, accuracy: 92% [test] loss: 0.002191, accuracy: 92%\n",
-      "epoch 21 [train] loss: 0.006539, accuracy: 92% [test] loss: 0.002194, accuracy: 92%\n",
-      "epoch 22 [train] loss: 0.006324, accuracy: 92% [test] loss: 0.002220, accuracy: 92%\n",
-      "epoch 23 [train] loss: 0.006358, accuracy: 93% [test] loss: 0.002148, accuracy: 92%\n",
-      "epoch 24 [train] loss: 0.006316, accuracy: 93% [test] loss: 0.002189, accuracy: 92%\n",
-      "epoch 25 [train] loss: 0.006238, accuracy: 93% [test] loss: 0.002214, accuracy: 92%\n",
-      "epoch 26 [train] loss: 0.006182, accuracy: 93% [test] loss: 0.002170, accuracy: 93%\n",
-      "epoch 27 [train] loss: 0.006123, accuracy: 93% [test] loss: 0.002171, accuracy: 93%\n",
-      "epoch 28 [train] loss: 0.006056, accuracy: 93% [test] loss: 0.002178, accuracy: 92%\n",
-      "epoch 29 [train] loss: 0.006064, accuracy: 93% [test] loss: 0.002164, accuracy: 92%\n",
-      "epoch 30 [train] loss: 0.005945, accuracy: 93% [test] loss: 0.002154, accuracy: 93%\n",
-      "epoch 31 [train] loss: 0.005908, accuracy: 93% [test] loss: 0.002196, accuracy: 93%\n",
-      "epoch 32 [train] loss: 0.005844, accuracy: 93% [test] loss: 0.002125, accuracy: 93%\n",
-      "epoch 33 [train] loss: 0.005881, accuracy: 93% [test] loss: 0.002198, accuracy: 93%\n",
-      "epoch 34 [train] loss: 0.005753, accuracy: 93% [test] loss: 0.002168, accuracy: 93%\n",
-      "epoch 35 [train] loss: 0.005775, accuracy: 93% [test] loss: 0.002172, accuracy: 93%\n",
-      "epoch 36 [train] loss: 0.005752, accuracy: 93% [test] loss: 0.002175, accuracy: 93%\n",
-      "epoch 37 [train] loss: 0.005733, accuracy: 93% [test] loss: 0.002237, accuracy: 92%\n",
-      "epoch 38 [train] loss: 0.005703, accuracy: 93% [test] loss: 0.002305, accuracy: 92%\n",
-      "epoch 39 [train] loss: 0.005719, accuracy: 93% [test] loss: 0.002255, accuracy: 92%\n",
-      "epoch 40 [train] loss: 0.005609, accuracy: 93% [test] loss: 0.002192, accuracy: 93%\n",
-      "epoch 41 [train] loss: 0.005480, accuracy: 94% [test] loss: 0.002221, accuracy: 92%\n",
-      "epoch 42 [train] loss: 0.005501, accuracy: 94% [test] loss: 0.002261, accuracy: 93%\n",
-      "epoch 43 [train] loss: 0.005523, accuracy: 93% [test] loss: 0.002100, accuracy: 93%\n",
-      "epoch 44 [train] loss: 0.005416, accuracy: 94% [test] loss: 0.002177, accuracy: 93%\n",
-      "epoch 45 [train] loss: 0.005498, accuracy: 93% [test] loss: 0.002237, accuracy: 93%\n",
-      "epoch 46 [train] loss: 0.005387, accuracy: 94% [test] loss: 0.002222, accuracy: 92%\n",
-      "epoch 47 [train] loss: 0.005327, accuracy: 94% [test] loss: 0.002190, accuracy: 93%\n",
-      "epoch 48 [train] loss: 0.005412, accuracy: 94% [test] loss: 0.002187, accuracy: 93%\n",
-      "epoch 49 [train] loss: 0.005263, accuracy: 94% [test] loss: 0.002240, accuracy: 93%\n",
-      "epoch 50 [train] loss: 0.005345, accuracy: 94% [test] loss: 0.002228, accuracy: 93%\n"
+      "epoch 1 [train] loss: 0.013934, accuracy: 84% [test] loss: 0.002842, accuracy: 90%\n",
+      "epoch 2 [train] loss: 0.009849, accuracy: 89% [test] loss: 0.002594, accuracy: 91%\n",
+      "epoch 3 [train] loss: 0.008683, accuracy: 90% [test] loss: 0.002220, accuracy: 92%\n",
+      "epoch 4 [train] loss: 0.008027, accuracy: 91% [test] loss: 0.002200, accuracy: 92%\n",
+      "epoch 5 [train] loss: 0.007325, accuracy: 92% [test] loss: 0.001997, accuracy: 93%\n",
+      "epoch 6 [train] loss: 0.006939, accuracy: 92% [test] loss: 0.002039, accuracy: 92%\n",
+      "epoch 7 [train] loss: 0.006536, accuracy: 92% [test] loss: 0.002022, accuracy: 93%\n",
+      "epoch 8 [train] loss: 0.006301, accuracy: 93% [test] loss: 0.001919, accuracy: 93%\n",
+      "epoch 9 [train] loss: 0.005954, accuracy: 93% [test] loss: 0.001853, accuracy: 93%\n",
+      "epoch 10 [train] loss: 0.005683, accuracy: 93% [test] loss: 0.001867, accuracy: 93%\n",
+      "epoch 11 [train] loss: 0.005414, accuracy: 94% [test] loss: 0.001774, accuracy: 94%\n",
+      "epoch 12 [train] loss: 0.005272, accuracy: 94% [test] loss: 0.001754, accuracy: 94%\n",
+      "epoch 13 [train] loss: 0.004972, accuracy: 94% [test] loss: 0.001766, accuracy: 94%\n",
+      "epoch 14 [train] loss: 0.004792, accuracy: 94% [test] loss: 0.001717, accuracy: 94%\n",
+      "epoch 15 [train] loss: 0.004679, accuracy: 94% [test] loss: 0.001720, accuracy: 94%\n",
+      "epoch 16 [train] loss: 0.004512, accuracy: 95% [test] loss: 0.001765, accuracy: 94%\n",
+      "epoch 17 [train] loss: 0.004390, accuracy: 95% [test] loss: 0.001711, accuracy: 94%\n",
+      "epoch 18 [train] loss: 0.004253, accuracy: 95% [test] loss: 0.001749, accuracy: 94%\n",
+      "epoch 19 [train] loss: 0.004079, accuracy: 95% [test] loss: 0.001845, accuracy: 94%\n",
+      "epoch 20 [train] loss: 0.004028, accuracy: 95% [test] loss: 0.001698, accuracy: 94%\n",
+      "epoch 21 [train] loss: 0.003965, accuracy: 95% [test] loss: 0.001771, accuracy: 94%\n",
+      "epoch 22 [train] loss: 0.003832, accuracy: 96% [test] loss: 0.001791, accuracy: 94%\n",
+      "epoch 23 [train] loss: 0.003664, accuracy: 96% [test] loss: 0.001827, accuracy: 94%\n",
+      "epoch 24 [train] loss: 0.003609, accuracy: 96% [test] loss: 0.001769, accuracy: 94%\n",
+      "epoch 25 [train] loss: 0.003509, accuracy: 96% [test] loss: 0.001766, accuracy: 94%\n",
+      "epoch 26 [train] loss: 0.003428, accuracy: 96% [test] loss: 0.001877, accuracy: 94%\n",
+      "epoch 27 [train] loss: 0.003383, accuracy: 96% [test] loss: 0.001722, accuracy: 94%\n",
+      "epoch 28 [train] loss: 0.003247, accuracy: 96% [test] loss: 0.001760, accuracy: 94%\n",
+      "epoch 29 [train] loss: 0.003161, accuracy: 96% [test] loss: 0.001754, accuracy: 94%\n",
+      "epoch 30 [train] loss: 0.003155, accuracy: 96% [test] loss: 0.001779, accuracy: 94%\n",
+      "epoch 31 [train] loss: 0.003019, accuracy: 96% [test] loss: 0.001823, accuracy: 94%\n",
+      "epoch 32 [train] loss: 0.003033, accuracy: 96% [test] loss: 0.001824, accuracy: 94%\n",
+      "epoch 33 [train] loss: 0.002963, accuracy: 96% [test] loss: 0.001751, accuracy: 94%\n",
+      "epoch 34 [train] loss: 0.002888, accuracy: 97% [test] loss: 0.001765, accuracy: 94%\n",
+      "epoch 35 [train] loss: 0.002805, accuracy: 97% [test] loss: 0.001851, accuracy: 94%\n",
+      "epoch 36 [train] loss: 0.002827, accuracy: 97% [test] loss: 0.001857, accuracy: 94%\n",
+      "epoch 37 [train] loss: 0.002727, accuracy: 97% [test] loss: 0.001889, accuracy: 94%\n",
+      "epoch 38 [train] loss: 0.002675, accuracy: 97% [test] loss: 0.001859, accuracy: 94%\n",
+      "epoch 39 [train] loss: 0.002615, accuracy: 97% [test] loss: 0.001943, accuracy: 94%\n",
+      "epoch 40 [train] loss: 0.002547, accuracy: 97% [test] loss: 0.001857, accuracy: 94%\n",
+      "epoch 41 [train] loss: 0.002515, accuracy: 97% [test] loss: 0.001810, accuracy: 94%\n",
+      "epoch 42 [train] loss: 0.002404, accuracy: 97% [test] loss: 0.001874, accuracy: 94%\n",
+      "epoch 43 [train] loss: 0.002485, accuracy: 97% [test] loss: 0.001831, accuracy: 94%\n",
+      "epoch 44 [train] loss: 0.002516, accuracy: 97% [test] loss: 0.001871, accuracy: 94%\n",
+      "epoch 45 [train] loss: 0.002347, accuracy: 97% [test] loss: 0.001906, accuracy: 94%\n",
+      "epoch 46 [train] loss: 0.002343, accuracy: 97% [test] loss: 0.001945, accuracy: 94%\n",
+      "epoch 47 [train] loss: 0.002254, accuracy: 97% [test] loss: 0.001956, accuracy: 94%\n",
+      "epoch 48 [train] loss: 0.002248, accuracy: 97% [test] loss: 0.001954, accuracy: 94%\n",
+      "epoch 49 [train] loss: 0.002219, accuracy: 97% [test] loss: 0.002012, accuracy: 94%\n",
+      "epoch 50 [train] loss: 0.002255, accuracy: 97% [test] loss: 0.001948, accuracy: 94%\n"
      ]
     }
    ],
@@ -353,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 73,
    "id": "50d0a240",
    "metadata": {},
    "outputs": [],
